# ggml-conversion

./: Makefile  README.md  pyproject.toml
dev/test-case/: CMakeLists.txt  main.cpp
ggml_conversion/: __init__.py  core.py  modules.py  templates.py  utils.py
notebooks/: add_const.onnx  explore_onnx.ipynb  measure_performance.ipynb
scripts/: measure_performance.py  test.py
tests/: test_simple_models.py
